updated databases datas

--- a/alembic.ini
+++ b/alembic.ini
@@ -59,9 +59,10 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # the output encoding used when revision files
 # are written from script.py.mako
 # output_encoding = utf-8
-
-sqlalchemy.url = postgres://russtravel:CTXnKRp6iwUOMmQf6k33dGta2qFQNNk7@dpg-coilasljm4es739qdp8g-a/russtravel
-
+#sqlalchemy.url = postgresql://russtravel:russtravel@localhost:5432/russtravel
+#sqlalchemy.url = postgres://russtravel:CTXnKRp6iwUOMmQf6k33dGta2qFQNNk7@dpg-coilasljm4es739qdp8g-a:5432/russtravel
+#sqlalchemy.url = postgres://russtravel:CTXnKRp6iwUOMmQf6k33dGta2qFQNNk7@dpg-coilasljm4es739qdp8g-a/russtravel
+sqlalchemy.url = postgresql://russtravel:CTXnKRp6iwUOMmQf6k33dGta2qFQNNk7@dpg-coilasljm4es739qdp8g-a:5432/russtravel
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
